# TabPFN_SSL

./: .coverage  .gitignore  LICENSE  README.md  analyze.py  cancel_non_sys_jobs.sh  conda_old.txt  coverage.xml  data.py  evaluate_interactive.py  experiments.py  model_runner.py  model_train.py  pyproject.toml  requirements-freeze-backup.txt  requirements.txt  run.sh  run_evaluation.py  run_interactive.py  train_seeds_multinode.slurm
.github/workflows/: ci.yml
evaluation/: confusion_metrics_functions.R  make_accuracy_plots.py  run_r_analysis.R  setup_r_env.sh  summarize_results.py
modules/: classifier.py  data.py  decision.py
scripts/: functions.py  model_runner.py  model_train.py  run.sh  run_local.py  smoke_local.py  train_seeds_multinode.slurm
tabpfn_ssl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tasks/: Task_Spirals.py  experiments.py  local_smoke.py  toy_examples.py
tests/: conftest.py  test_all_datasets_smoke.py  test_classifier.py  test_classifier_full.py  test_data_sanity.py  test_datasets.py  test_decision.py  test_functions_more.py  test_functions_unit.py  test_local_smoke_run.py  test_model_runner_inprocess.py  test_model_train_errors.py  test_model_train_inprocess.py  test_multiple_experiments.py  test_output_schema.py  test_reproducibility.py  test_tabpfn_fit_slow.py  test_tabpfn_import.py  test_tabpfn_tiny.py
