[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabpfn-ssl"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "numpy<2",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "python-dotenv>=1.0",
    "tqdm",
    "pyyaml",
    # Intel-macOS (x86_64): letzte Wheel-Serie
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    # Alle anderen Plattformen (macOS arm64, Linux, Windows):
    "torch>=2.3; (sys_platform != 'darwin') or (platform_machine != 'x86_64')",
    # TabPFN: nimm die Version, die bei dir funktioniert
    "tabpfn==6.4.1",
    "matplotlib>=3.10.8",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "evaluation*"]
exclude = ["results*", "tests*", "data*", "notebooks*", ".venv*", "scripts*"]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
